Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Service__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Month__c</fullName>
        <label>Billing Month</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Ticket_Type__c</fullName>
        <label>Service Ticket Type</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Service</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>